--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,16 +6,27 @@
     <meta name="theme-color" content="#000000">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-    <title>React App</title>
+    <title>Cookbook</title>
     <style>
-      html {
+      @import url('https://fonts.googleapis.com/css?family=Domine|Sorts+Mill+Goudy');
+      * {
         margin: 0;
+        padding: 0
+      }
+      html {
         height: 100%;
-        width: 100%
+        width: 100%;
+        font-family: 'Sorts Mill Goudy', serif;
       }
       body {
         width: 100%;
-        height: 100%
+        height: 100%;
+      }
+
+      #root {
+        width: 100%;
+        height: 100%;
+        background-color: rgb(250, 222, 198);
       }
     </style>
   </head>
