--- a/client/public/index.html
+++ b/client/public/index.html
@@ -13,20 +13,16 @@
         margin: 0;
         padding: 0
       }
-      html {
+      html, body {
         height: 100%;
         width: 100%;
         font-family: 'Sorts Mill Goudy', serif;
-      }
-      body {
-        width: 100%;
-        height: 100%;
+        background-color: rgb(250, 222, 198);
       }
 
       #root {
-        width: 100%;
-        height: 100%;
-        background-color: rgb(250, 222, 198);
+        width: inherit;
+        height: inherit;
       }
     </style>
   </head>
